welcome.lessons.welcome.array.array123.Array123.scala.error
array123:15: error: not found: value nums
  var l = nums.length
          ^array123:18: error: not found: value nums
    res(i)=nums(i)
           ^array123:17: error: type mismatch;
 found   : Unit
 required: Array[Int]
  for (i<- 0 to l-2){
        ^